--- a/style.css
+++ b/style.css
@@ -1,23 +1,26 @@
 body {
     font-size: 10pt;
-    background: #000000;
+    background: #872B2B;
 }
 h1{
- color: #FFFFFF;
- background: #313131;
+ color: #B20909;
+ background: #BE5A5A;
  border-right: double;
  border-top: double;
  border-bottom: double;
  border: double;
- font-family: sans-serif;
+ font-family: monospace;
+ font-size: 30pt;
 }
 h2{
   color: #FFFFFF;
 }
 
 p {
- color: #FFFFFF;
+ color: #FF4D4D;
+ font-family: monospace;
 }
-li{
-  color: #FFFFFF;
+a{
+  color: #BA0909;
+  font-family: monospace;
 }
