--- a/style.css
+++ b/style.css
@@ -6,10 +6,7 @@ body {
 h1{
  color: #B88A2F;
  background: #3E2E0D;
- border-right: double;
- border-top: double;
- border-bottom: double;
- border: double;
+ border: 7px ridge #00bbff;
  font-family: 'Trebuchet MS';
  font-size: 30pt;
  text-align: center;
