Add drop-shadow filter to h1 style

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ h1{
  color: #B88A2F;
  background: #3E2E0D;
  border: 7px ridge #00bbff;
+ filter: drop-shadow(5px 5px 10px #000000);
  font-family: 'Trebuchet MS';
  font-size: 30pt;
  text-align: center;
